set keepass default length to 32, update setup.sh due to new dependencies, suppress vscodium error popups

--- a/keepassxc.ini
+++ b/keepassxc.ini
@@ -22,7 +22,8 @@ QuietSuccess=true
 AdditionalChars=
 AdvancedMode=true
 ExcludedChars=
-Length=32
+Length=16
+Logograms=false
 SpecialChars=true
 Type=0
 UpperCase=true
@@ -31,4 +32,5 @@ WordCount=32
 WordSeparator=
 
 [Security]
+ClearClipboardTimeout=60
 LockDatabaseScreenLock=false
