--- a/keepassxc.ini
+++ b/keepassxc.ini
@@ -7,6 +7,7 @@ UpdateCheckMessageShown=true
 [Browser]
 CustomProxyLocation=
 Enabled=true
+SearchInAllDatabases=true
 
 [GUI]
 HideUsernames=false
@@ -19,7 +20,7 @@ Own="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSc
 QuietSuccess=true
 
 [PasswordGenerator]
-AdditionalChars=
+AdditionalChars=!@#$%^&*().
 AdvancedMode=true
 ExcludedChars=
 Length=32
