add more special chars

--- a/keepassxc.ini
+++ b/keepassxc.ini
@@ -20,7 +20,7 @@ Own="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSc
 QuietSuccess=true
 
 [PasswordGenerator]
-AdditionalChars=!@#$%^&*().
+AdditionalChars="?!%$@_-/()[]="
 AdvancedMode=true
 ExcludedChars=
 Length=32
