--- a/terminator.config
+++ b/terminator.config
@@ -5,7 +5,9 @@
 [profiles]
   [[default]]
     cursor_color = "#aaaaaa"
+    font = Ubuntu Mono 20
     scrollback_infinite = True
+    use_system_font = False
 [layouts]
   [[default]]
     [[[window0]]]
