--- a/keepassxc.ini
+++ b/keepassxc.ini
@@ -1,5 +1,5 @@
 [General]
-ConfigVersion=1
+ConfigVersion=2
 GlobalAutoTypeKey=65
 GlobalAutoTypeModifiers=201326592
 UpdateCheckMessageShown=true
@@ -13,23 +13,19 @@ SearchInAllDatabases=true
 HideUsernames=false
 TrayIconAppearance=monochrome-light
 
-[KeeShare]
-Active="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <Active/>\n</KeeShare>\n"
-Foreign="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <Foreign/>\n</KeeShare>\n"
-Own="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <PrivateKey/>\n  <PublicKey/>\n</KeeShare>\n"
 QuietSuccess=true
 
 [PasswordGenerator]
-AdditionalChars="!$%&/()=?+#,.-"
+AdditionalChars=
 AdvancedMode=true
 ExcludedChars=
 Length=32
-Logograms=false
-SpecialChars=true
+Logograms=true
+SpecialChars=false
 Type=0
 UpperCase=true
 WordCase=2
-WordCount=5
+WordCount=4
 WordSeparator=
 
 [Security]
