--- a/keepassxc.ini
+++ b/keepassxc.ini
@@ -11,16 +11,15 @@ SearchInAllDatabases=true
 
 [GUI]
 HideUsernames=false
-TrayIconAppearance=monochrome-light
-
 QuietSuccess=true
+TrayIconAppearance=monochrome-light
 
 [PasswordGenerator]
 AdditionalChars=
 AdvancedMode=true
 ExcludedChars=
 Length=32
-Logograms=true
+Logograms=false
 SpecialChars=false
 Type=0
 UpperCase=true
