--- a/keepassxc.ini
+++ b/keepassxc.ini
@@ -5,6 +5,7 @@ GlobalAutoTypeModifiers=201326592
 UpdateCheckMessageShown=true
 
 [Browser]
+AlwaysAllowAccess=true
 CustomProxyLocation=
 Enabled=true
 SearchInAllDatabases=true
@@ -19,7 +20,7 @@ AdditionalChars=
 AdvancedMode=true
 ExcludedChars=
 Length=32
-Logograms=false
+Logograms=true
 SpecialChars=false
 Type=0
 UpperCase=true
